# ligero

./: Cargo.toml  README.md
arithmetic-circuits/: Cargo.toml
arithmetic-circuits/src/arithmetic_circuit/: mod.rs  tests.rs
arithmetic-circuits/src/expression/: mod.rs  tests.rs
benches/: bench.rs  my_benchmark.rs  prove_verify.rs  results.txt
circom/: padding_test.circom  repeated_squaring_10.circom  sum_of_sqrt.circom  sum_of_sqrt.r1cs  sum_of_sqrt.wasm  witness_10.json
circom/poseidon/: input.json  poseidon.circom  poseidon.r1cs  poseidon.sym  witness.json  witness.wtns
circom/poseidon/poseidon_js/: poseidon.wasm
ligero/: Cargo.toml
ligero/src/: lib.rs  utils.rs
ligero/src/ligero/: mod.rs  tests.rs  types.rs
ligero/src/matrices/: mod.rs
src/: circuit.rs  lib.rs  node.rs  utils.rs
src/arithmetic_circuit/: mod.rs  tests.rs
src/circuit_builder/: mod.rs
src/expression/: mod.rs  tests.rs
src/ligero/: mod.rs  tests.rs  types.rs
src/matrices/: mod.rs
