[package]
name = "ligero"
version = "0.1.0"
edition = "2021"
categories = ["cryptography"]
license = "MIT OR Apache-2.0"

[dependencies]
ark-std = { version = "0.5.0-alpha", default-features = false }
ark-ff = { version = "0.5.0-alpha", default-features = false }
ark-circom = { git = "https://github.com/HungryCatsStudio/circom-compat", branch = "update-0.5" }
ark-poly = { version = "0.5.0-alpha", default-features = false }
ark-relations = { version = "0.5.0-alpha", default-features = false }
ark-crypto-primitives = { version = "0.5.0-alpha", default-features = false, features = ["sponge"] }
ark-ec = { version = "0.5.0-alpha", default-features = false }
ark-serialize = { version = "0.5.0-alpha", default-features = false, features = ["derive"] }
ark-poly-commit = { git = "https://github.com/HungryCatsStudio/poly-commit", branch = "release-0.5", default-features = false, features = [ "test-types" ] }
itertools = "0.10.0"
derivative = { version = "2", features = [ "use_core" ] }
criterion = { version = "0.5", default-features = false }
num-bigint = "0.4.0"
rand_chacha = { version = "0.3.0", default-features = false }
blake2 = { version = "0.10", default-features = false }

[dev-dependencies]
ark-bn254 = { version = "0.5.0-alpha", default-features = false, features = [ "curve" ] }
ark-bls12-377 = { version = "0.5.0-alpha", default-features = false, features = [ "curve" ] }
ark-poly-commit = { git = "https://github.com/HungryCatsStudio/poly-commit", branch = "release-0.5", default-features = false, features = [ "test-types" ] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
criterion = "0.3"

[features]
default = [ "std" ]
std = [ "ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-std/std", "ark-relations/std", "ark-serialize/std", "ark-crypto-primitives/std", "ark-poly-commit/std" ]
test-types = [ "ark-poly-commit/test-types" ]
bench = [ "std", "test-types" ]