[workspace]
members = ["arithmetic-circuits", "ligero"]
resolver = "2"

[workspace.dependencies]
ark-std = { version = "0.5.0-alpha", default-features = false }
ark-ff = { version = "0.5.0-alpha", default-features = false }
ark-circom = { git = "https://github.com/HungryCatsStudio/circom-compat", branch = "update-0.5" }
ark-poly = { version = "0.5.0-alpha", default-features = false }
ark-relations = { version = "0.5.0-alpha", default-features = false }
ark-crypto-primitives = { version = "0.5.0-alpha", default-features = false, features = ["sponge"] }
ark-ec = { version = "0.5.0-alpha", default-features = false }
ark-serialize = { version = "0.5.0-alpha", default-features = false, features = ["derive"] }
ark-poly-commit = { git = "https://github.com/HungryCatsStudio/poly-commit", branch = "release-0.5", default-features = false, features = [ "test-types" ] }
itertools = "0.10.0"
derivative = { version = "2", features = [ "use_core" ] }
criterion = { version = "0.5", default-features = false }
num-bigint = "0.4.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
rand_chacha = { version = "0.3.0", default-features = false }
blake2 = { version = "0.10", default-features = false }

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/HungryCatsStudio/ligero"
repository = "https://github.com/HungryCatsStudio/ligero"
keywords = ["cryptography", "SNARK", "circuits", "ligero"]
categories = ["cryptography"]